Client: ~ Implement Responsive Design For UI ~ Added Support for Small , Medium , Large & above display sizes ~ Grid Layout Has Also Changed ~ Item List is hidden when Item Details are shown on Small Screens ~ Side Nav Buttons are shifted to Lowest Row ~ Nav Links Label Are Hidden Below Large Screens ~ Footer is Hidden in Below Large Screens ~ ItemFields Style for Min Width also changed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,8 @@
 	--color-amber-orange: #ffbf00;
 	--color-melon-red: #ff4e63;
 	--color-medium-purple: #976fd9;
+	--breakpoint-xs: 370px;
+	--breakpoint-md: 780px;
 }
 
 /* Text Color: text-blue-300 */
